[project]
name = "tech-content-automation"
version = "0.1.0"
description = "Automated content generation system for trending tech content"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "APScheduler>=3.10.0",
    "feedparser>=6.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "sqlite-utils>=3.35",
    "sqlalchemy>=2.0.0",
    "python-dateutil>=2.8.0",
    "pytz>=2023.0",
    "beautifulsoup4[lxml]>=4.12.0",
    "gitpython>=3.1.0",
    "python-slugify>=8.0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "aggregators", "generators", "db"]
